# rankgen

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
human-eval-data/: gpt2_medium.csv  t5_xxl_c4.csv
human_eval_data/: t5_xxl_c4.csv
old/: requirements-bak.txt
rankgen/: __init__.py  ab_tests.py  avg_lengths.py  choose_examples.py  export_results.py  gpt2_generate_contrastive_decoding.py  gpt2_generate_contrastive_search.py  gpt2_score.py  gpt3_score.py  human_eval.py  plot_divergence_curves.py  rankgen_beam_search.py  rankgen_beam_search_shifting.py  rankgen_encoder.py  rankgen_generator.py  rankgen_textgen.py  retriever_score.py  score_ab.py  score_ab_text.py  test_rankgen_encoder.py  token_overlap.py  token_overlap_generate.py  utils.py
rankgen/parallel/: merge.py  parallel_template_gpu.sh  schedule.py
rankgen_model/: modeling_rankgen.py
scripts/: ab_tests.py  ab_tests_generations.py  build_new_ab_split.py  convert_checkpoint.py  gpt2_generate.py  gpt2_score.py  gpt3_score.py  human_eval.py  preprocess_story_cloze.py  rankgen_beam_search.py  rankgen_beam_search_choose_eg.py  rankgen_beam_search_shifting.py  score_ab.py  score_ab_text.py  score_multi.py  score_multi_beam.py  score_multi_token_overlap.py  score_multi_tsv.py  shorten_prefix.py  shorten_suffix.py  t5x_embeddings.py  test_t5x_embeddings.py  token_overlap.py  utils.py
scripts/parallel/: merge.py  parallel_template_gpu.sh  schedule.py
